--- a/document.css
+++ b/document.css
@@ -26,6 +26,10 @@ h1{
 	margin:0;
 	line-height: 3;
 	padding:0 1em;
+	font-family:'苹方';
+	/* font-weight:1200; */
+	/* color:#FFF; */
+    text-shadow: 1px 1px 0 #ff658c, -1px -1px 0 #77cdc7;
 }
 
 h3,h4{
