展示细节调整

--- a/document.less
+++ b/document.less
@@ -164,6 +164,7 @@ hr{
         // max-width:1200px;
         img{
             float: left;
+            width: 50%;
             max-width: var(--max-width);
             max-height: var(--max-width);
         }
