input range fieldset width bug fix

--- a/document.less
+++ b/document.less
@@ -352,6 +352,12 @@ input[type="range"]{
     }
 }
 
+@media (max-width:500px) {
+	input[type="range"]{
+		max-width: calc(100vw - 30px);
+	}
+}
+
 label{
 	cursor: pointer;
 }
